"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-02-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-50:
	  guile-2.0 compatibility, see also util/ChangeLog
		SCM function define wrapper macro uses scm_t_subr
		ctor-style type wrap, but guile-2.0 still build-fails
		with warning about converting from pointer-function
		to pointer-object, as defined to void* in header.
	  see guile-2.0 fixes in scm/ChangeLog


2011-02-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-49b:
	  Failed attempt to implement nonmeta member references.
	  Commented out with switch NONMETA_MEMBER_REFERENCES
		in Object/devel_switches.h
	  No functional changes, no regressions.
		Placeholder test case added (expect-fail for now)


2011-02-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-49:
	  Finally debugged and fixed longstanding issue with using newer
		versions of flex: skeleton changed initial value of
		yy_init, thereby leading to accessing to uninitialized
		null pointers.  This is fixed by detecting the skeleton's
		initial value of yy_init in an autoconf test and
		propagating it to lexer/flex_lexer_state.h (ctor).
	  Can now finally use flex >= 2.5.33.


2011-02-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-48:
	  hacprsim, parser/instref: added support for most commands on nodes
		to automatically expand array references and apply 
		the same command to all referenced nodes.  
		DISABLED!  because of bad interaction with 
			working-directory expansion, confusion on ".."
			being expanded.  TODO: fix me.


2011-02-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-47:
	  hacprsim channel commands now implicitly expand channel
		array references to apply command to all referenced
		channels, much easier to script now.