@@ -1,6 +1,6 @@
 # "Make.test-guile"
 #	vi: ft=automake
-#	$Id: Make.test-guile,v 1.23 2011/03/01 17:36:11 fang Exp $
+#	$Id: Make.test-guile,v 1.24 2011/03/04 20:29:37 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -40,10 +40,13 @@ HACKT_GUILE_CLEAN_IGNORE_PATTERNS = \
 AUTO_IGNORE += $(HACKT_GUILE_CLEAN_IGNORE_PATTERNS)
 
 # second filter added to account for guile-1.6 error differences
+# filter out banner
+# filter out auto-compile comments (guile-2.0+)
+# filter out eval-print enumeration (guile-2.0+)
 HACSCM_OUTPUT_FILTER = \
 	{ $(SED) -e '/module created/s/: [^ ]*[ ]/: \#\#FILE\#\# /g' \
 		-e '/^Type "(backtrace)" to get more information/d' | \
-	$(GREP) -v "^;;;" | $(SED) -e '0,/,help/d' -e 's|^\$$[0-9]* = ||' ;}
+	$(GREP) -v "^;;;" | $(SED) -e '/GNU guile/,/,help/d' -e 's|^\$$[0-9]* = ||' ;}
 
 # different versions of guile have slightly different error formats
 # This is only used as a backup plan, see rule for .hacscmfail-diff.
