@@ -3,6 +3,14 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2011-03-01	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-84-50b:
+	  Added to Object/expr/meta_func_lib.cc: ztor, rtoz
+		for converting/casting between ints and reals.
+	  Documented, but no test cases yet.
+
+
 2011-02-28	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-84-50:
